new bubble screensaver

--- a/index.html
+++ b/index.html
@@ -27,19 +27,11 @@
     </div>
 
     <section class="purple-section">
-      <div class="opening-content" align="center">
-        <div id="circle1"> </div>
-        <div id="circle2"> </div>
-        <div id="circle3"> </div>
-        <h1> We're launching! </h1>
-        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-      </div>
+      <div id="sketch"> </div>
     </section>
 
     <section class="white-section">
       <div class="content" align="center">
-        <div id="circle4"> </div>
-        <div id="circle5"> </div>
         <h1> What is Pivot to Civic? </h1>
         <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
       </div>
@@ -47,7 +39,6 @@
 
     <section class="grey-section">
       <div class="content" align="center">
-        <div id="circle6"> </div>
         <h1> Partners </h1>
         <img src="images/cif.png">
       </div>
@@ -55,8 +46,6 @@
 
     <section class="white-section">
       <div class="content" align="center">
-        <div id="circle7"> </div>
-        <div id="circle8"> </div>
         <h1> Join Our Newsletter </h1>
         <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
       </div>
@@ -64,9 +53,6 @@
 
     <section class="grey-section">
       <div id="about" class="content" align="center">
-        <div id="circle9"> </div>
-        <div id="circle10"> </div>
-        <div id="circle11"> </div>
         <h1> About Us </h1>
         <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
       </div>
