i dont know dude these iterations i s2g

--- a/index.html
+++ b/index.html
@@ -12,17 +12,13 @@
     <script src="p5/p5.min.js"></script>
     <script src="p5/addons/p5.dom.min.js"></script>
     <script src="p5/addons/p5.sound.min.js"></script>
+    <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
   </head>
 
   <body>
     <div id="navigation">
       <div id="logo">
-        <a href="#"><img src="images/logo.png"></a>
-      </div>
-
-      <div id="nav-bar">
-        <a class="nav-link" href="#about"> About </a>
-        <a class="nav-link" href="#"> Contact </a>
+        <h2> Pivot to Civic </h2>
       </div>
     </div>
 
@@ -37,33 +33,14 @@
 
     <section class="white-section">
       <div class="content" align="center">
-        <h1> What is Pivot to Civic? </h1>
-        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-      </div>
-    </section>
-
-    <section class="grey-section">
-      <div class="content" align="center">
-        <h1> Partners </h1>
-        <img src="images/cif.png">
-      </div>
-    </section>
-
-    <section class="white-section">
-      <div class="content" align="center">
         <h1> Join Our Newsletter </h1>
         <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
       </div>
     </section>
 
-    <section class="grey-section">
-      <div id="about" class="content" align="center">
-        <h1> About Us </h1>
-        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-      </div>
-    </section>
-
     <footer>
+      <br><br><br>
+      <p align="center" id="thanks"> Made with <i class="em em-sparkling_heart"></i> by <a href="http://www.genesiatingphotography.com/">Genesia</a>, <a href="https://twitter.com/omer_bensaadon">Omer</a>, and <a href="https://twitter.com/emolyfong">Emily</a></p>
     </footer>
 
   </body>
