--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
           <a class="navbar-name" href="#"><img id="logo" src="assets/logo.png"></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right">
-            <a href="signup.html" target="_blank" class="join"> Join Newsletter</a>
-            <a href="#about" class="menu-option"> About </a>
-            <a href="#team" class="menu-option"> Our Team</a>
-            <a href="#questions" class="menu-option"> FAQ </a>
+          <form class="navbar-form navbar-right" id="top-links-structure">
+            <a href="signup.html" target="_blank" class="join top-link"> Join Our Newsletter</a>
+            <a href="#about" class="menu-option top-link"> About </a>
+            <a href="#team" class="menu-option top-link"> Our Team</a>
+            <a href="#questions" class="menu-option top-link"> FAQ </a>
           </form>
         </div><!--/.navbar-collapse -->
       </div>
@@ -50,7 +50,7 @@
 
         <div class="col-md-7">
           <h1> Welcome! </h1>
-          <p style="font-size: 18px;"> The Pivot to Civic initiative — started by recent grads looking for
+          <p> The Pivot to Civic initiative — started by recent grads looking for
               opportunities in civic tech — aims to build a talent pipeline of
               budding designers, developers, and product people into the social
               impact technology space. We're passionate about sharing these
@@ -60,9 +60,9 @@
         </div>
       </div>
       <div class="container">
-        <div class="col-md-7">
+        <div class="col-md-5">
         </div>
-        <div class="col-md-3">
+        <div class="col-md-7">
           <a href="signup.html" target="_blank" id="action"> <strong>Join Our Newsletter</strong></a>
         </div>
       </div>
@@ -96,26 +96,29 @@
         <div class="col-md-4 about-div">
           <div class="about-pic" id="emily">
           </div>
-          <h4> Our Team </h4>
+          <br>
+          <h4> Emily Fong </h4>
           <h5> Co-Founder, Technical Lead </h5>
-          <a href="https://www.linkedin.com/in/em-fong/" target="_blank"><img src="assets/linkedin.svg"></a>
-          <a href="https://twitter.com/emolyfong" target="_blank"><img src="assets/twitter.svg"></a>
+          <a href="https://www.linkedin.com/in/em-fong/" target="_blank"><img class="socials" src="assets/linkedin.svg"></a>
+          <a href="https://twitter.com/emolyfong" target="_blank"><img class="socials" src="assets/twitter.svg"></a>
         </div>
         <div class="col-md-4 about-div">
           <div class="about-pic" id="genesia">
           </div>
+          <br>
           <h4> Genesia Ting </h4>
           <h5> Co-Founder, Design Lead </h5>
-          <a href="https://www.linkedin.com/in/genesiating/" target="_blank"><img src="assets/linkedin.svg"></a>
-          <a href="https://twitter.com/genesiating" target="_blank"><img src="assets/twitter.svg"></a>
+          <a href="https://www.linkedin.com/in/genesiating/" target="_blank"><img class="socials" src="assets/linkedin.svg"></a>
+          <a href="https://twitter.com/genesiating" target="_blank"><img class="socials" src="assets/twitter.svg"></a>
        </div>
         <div class="col-md-4 about-div">
           <div class="about-pic" id="omer">
           </div>
+          <br>
           <h4> Omer Bensaadon </h4>
           <h5> Co-Founder, Product Lead </h5>
-          <a href="https://www.linkedin.com/in/obensaadon/" target="_blank"><img src="assets/linkedin.svg"></a>
-          <a href="https://twitter.com/omer_bensaadon" target="_blank"><img src="assets/twitter.svg"></a>
+          <a href="https://www.linkedin.com/in/obensaadon/" target="_blank"><img class="socials" src="assets/linkedin.svg"></a>
+          <a href="https://twitter.com/omer_bensaadon" target="_blank"><img class="socials" src="assets/twitter.svg"></a>
         </div>
       </div>
     </div> <!-- /container -->
@@ -140,11 +143,13 @@
               <p>Pivot to Civic (c) 2018, made with love <3 </p>
           </div>
 
-          <div class="col-md-6" align="right">
+          <div class="col-md-6">
+            <div id="social-footer">
               <a href="mailto:hello@pivottocivic.com"><img class="footer-icon" src="assets/email.svg"></a>
               <a href="https://www.linkedin.com/company/pivottocivic/" target="_blank"><img class="footer-icon" src="assets/linkedin-footer.svg"></a>
               <img class="footer-icon" src="assets/twitter-footer.svg">
               <img class="footer-icon" src="assets/slack.svg">
+            </div>
           </div>
         </div>
       </div>
