--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <!-- Custom styles for this template -->
     <link href="main.css" rel="stylesheet">
 
+    <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us18.list-manage.com","uuid":"b362cb82549ec5e4bfcaad1a4","lid":"71471a27c0"}) })</script>
+
   </head>
 
   <body>
@@ -63,7 +65,7 @@
         <div class="col-md-5">
         </div>
         <div class="col-md-7">
-          <a href="signup.html" target="_blank" id="action"> <strong>Join Our Newsletter</strong></a>
+          <button id="action"> Join Our Newsletter</button>
         </div>
       </div>
     </div>
@@ -139,7 +141,7 @@
       <div class="container">
         <br>
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-6" id="made-with">
               <p>Pivot to Civic (c) 2018, made with love <3 </p>
           </div>
 
@@ -161,5 +163,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+
   </body>
 </html>
