--- a/index.html
+++ b/index.html
@@ -169,8 +169,7 @@
     <script>
     function showMailingPopUp() {
         require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us18.list-manage.com","uuid":"b362cb82549ec5e4bfcaad1a4","lid":"71471a27c0"}) })
-        document.cookie = 'MCEvilPopupClosed=;path=/;expires=Thu, 01 Jan 1970 00:00:00 UTC;';
-        document.cookie = 'MCPopupSubscribed=;path=/;expires=Thu, 01 Jan 1970 00:00:00 UTC;';
+        document.cookie = '_AVESTA_ENVIRONMENT=;path=/;expires=Thu, 01 Jan 1970 00:00:00 UTC;';
     };
 
     document.getElementById("open-popup").onclick = function() {
