--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@
 
     <script>
     function showMailingPopUp() {
-        require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us18.list-manage.com","uuid":"b362cb82549ec5e4bfcaad1a4","lid":"71471a27c0"}) })
+        require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us18.list-manage.com","uuid":"b362cb82549ec5e4bfcaad1a4","lid":"71471a27c0"}) });
+        console.log(document.cookie);
         document.cookie = '_AVESTA_ENVIRONMENT=;path=/;expires=Thu, 01 Jan 1970 00:00:00 UTC;';
     };
 
