--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <form class="navbar-form navbar-right" id="top-links-structure">
-            <a href="signup.html" target="_blank" class="join top-link" id="open-popup1"> Join Our Newsletter</a>
+            <button class="top-link" id="open-popup1"> Join Our Newsletter</button>
             <a href="#about" class="menu-option top-link"> About </a>
             <a href="#team" class="menu-option top-link"> Our Team</a>
             <a href="#questions" class="menu-option top-link"> FAQ </a>
