--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
     document.getElementById("open-popup1").onclick = function() {
       showMailingPopUp();
-      console.log("CLICK");
+      console.log("clique");
     };
 
     document.getElementById("open-popup2").onclick = function() {
