changed name fonts, margin of team tag

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
       <div class="row">
         <div class="col-md-3">
-          <h3> Our Team </h3>
+          <h3 id="team-title"> Our Team </h3>
         </div>
       </div>
 
@@ -98,8 +98,7 @@
         <div class="col-md-4 about-div">
           <div class="about-pic" id="emily">
           </div>
-          <br>
-          <h4> Emily Fong </h4>
+          <h4> <strong> Emily Fong </strong> </h4>
           <h5> Co-Founder, Technical Lead </h5>
           <a href="https://www.linkedin.com/in/em-fong/" target="_blank"><img class="socials" src="assets/linkedin.svg"></a>
           <a href="https://twitter.com/emolyfong" target="_blank"><img class="socials" src="assets/twitter.svg"></a>
@@ -108,7 +107,7 @@
           <div class="about-pic" id="genesia">
           </div>
           <br>
-          <h4> Genesia Ting </h4>
+          <h4> <strong> Genesia Ting </strong> </h4>
           <h5> Co-Founder, Design Lead </h5>
           <a href="https://www.linkedin.com/in/genesiating/" target="_blank"><img class="socials" src="assets/linkedin.svg"></a>
           <a href="https://twitter.com/genesiating" target="_blank"><img class="socials" src="assets/twitter.svg"></a>
@@ -117,7 +116,7 @@
           <div class="about-pic" id="omer">
           </div>
           <br>
-          <h4> Omer Bensaadon </h4>
+          <h4> <strong> Omer Bensaadon </strong> </h4>
           <h5> Co-Founder, Product Lead </h5>
           <a href="https://www.linkedin.com/in/obensaadon/" target="_blank"><img class="socials" src="assets/linkedin.svg"></a>
           <a href="https://twitter.com/omer_bensaadon" target="_blank"><img class="socials" src="assets/twitter.svg"></a>
