--- a/signup.html
+++ b/signup.html
@@ -10,12 +10,6 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300|Playfair+Display:700" rel="stylesheet">
     <title>Pivot to Civic</title>
 
-    <style type="text/css">
-      #mc_embed_signup{background:#fff; clear:left; }
-      /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-         We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-    </style>
-
     <!-- Custom styles for this template -->
     <link href="signup.css" rel="stylesheet">
 
@@ -24,52 +18,26 @@
   <body>
     <div align="center">
 
-        <!-- Begin MailChimp Signup Form -->
-        <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-        <div id="mc_embed_signup">
-        <form action="https://gmail.us18.list-manage.com/subscribe/post?u=b362cb82549ec5e4bfcaad1a4&amp;id=71471a27c0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-            <div id="mc_embed_signup_scroll">
-        	<h1 align="center">Subscribe to Pivot to Civic!</h1>
-        <div class="mc-field-group">
-        	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
-        </label> <br>
-        	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-        </div>
-        <div class="mc-field-group">
-        	<label for="mce-FNAME">First Name </label><br>
-        	<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
-        </div>
-        <div class="mc-field-group">
-        	<label for="mce-LNAME">Last Name </label><br>
-        	<input type="text" value="" name="LNAME" class="" id="mce-LNAME">
-        </div>
-        <div class="mc-field-group">
-        	<label for="mce-MMERGE3">I am...  <span class="asterisk">*</span>
-        </label><br>
-        	<select name="MMERGE3" class="required" id="mce-MMERGE3">
-        	<option value=""></option>
-        	<option value="A Student">A Student</option>
-        <option value="A New Grad">A New Grad</option>
-        <option value="An experienced professional">An experienced professional</option>
-        <option value="None of the above">None of the above</option>
+      <!-- Begin MailChimp Signup Form -->
+<link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
+/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
+<div id="mc_embed_signup">
+<form action="https://gmail.us18.list-manage.com/subscribe/post?u=b362cb82549ec5e4bfcaad1a4&amp;id=71471a27c0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+  <div id="mc_embed_signup_scroll">
+<label for="mce-EMAIL">Subscribe to our mailing list</label>
+<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+  <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_b362cb82549ec5e4bfcaad1a4_71471a27c0" tabindex="-1" value=""></div>
+  <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+  </div>
+</form>
+</div>
 
-        	</select>
-        </div>
-        <div class="mc-field-group">
-        	<label for="mce-MMERGE4">I want to see jobs that are... </label><br>
-        	<input type="text" value="" name="MMERGE4" class="" id="mce-MMERGE4">
-        </div>
-        	<div id="mce-responses" class="clear">
-        		<div class="response" id="mce-error-response" style="display:none"></div>
-        		<div class="response" id="mce-success-response" style="display:none"></div>
-        	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_b362cb82549ec5e4bfcaad1a4_71471a27c0" tabindex="-1" value=""></div>
-            <br><div class="clear" align="center"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-            </div>
-        </form>
-        </div>
-        <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='MMERGE3';ftypes[3]='dropdown';fnames[4]='MMERGE4';ftypes[4]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-        <!--End mc_embed_signup-->
+<!--End mc_embed_signup-->
 
     </div>
   </body>
