--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Playfair+Display:700" rel="stylesheet">
 
+    <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
+
     <title>Pivot to Civic</title>
 
     <!-- Bootstrap core CSS -->
