--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
             <div align="center" id="mc_embed_signup">
             <form action="https://gmail.us18.list-manage.com/subscribe/post?u=b362cb82549ec5e4bfcaad1a4&amp;id=71471a27c0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                 <div id="mc_embed_signup_scroll">
-            	<label for="mce-EMAIL">Join Our Newsletter!</label>
+            	<label for="mce-EMAIL" style="font-size: 16px;">Join Our Newsletter!</label>
               <br>
             	<input id="email-bar" type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
                 <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                 <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_b362cb82549ec5e4bfcaad1a4_71471a27c0" tabindex="-1" value=""></div>
-                <div class="clear"><input id="join2" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                <div class="clear"><input style="background-color: ##EC474D;" id="join2" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
                 </div>
             </form>
             </div>
