--- a/index.html
+++ b/index.html
@@ -56,22 +56,22 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron" id="opener">
       <div class="container">
-        <div class="col-md-5">
+        <div class="col-md-6">
         </div>
 
-        <div class="col-md-7">
-          <h1> Pivot to Civic is a biweekly newsletter for entry-level civic tech jobs.  </h1>
+        <div class="col-md-6">
+          <h1> Pivot to Civic is a biweekly newsletter for entry-level <br>civic tech jobs.  </h1>
               <br>
         </div>
       </div>
       <div class="container">
-        <div class="col-md-5">
+        <div class="col-md-6">
         </div>
-        <div class="col-md-7">
+        <div class="col-md-6">
 
           <!-- Begin MailChimp Signup Form -->
             <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
-            <div align="center" id="mc_embed_signup">
+            <div id="mc_embed_signup">
             <form action="https://gmail.us18.list-manage.com/subscribe/post?u=b362cb82549ec5e4bfcaad1a4&amp;id=71471a27c0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                 <div id="mc_embed_signup_scroll">
             	<label for="mce-EMAIL" style="font-size: 16px;">Join Our Newsletter!</label>
@@ -156,17 +156,17 @@
         </div>
         <br>
         <div class="col-md-9">
-          <h4 class="faq" onclick="toggle(0)"> What kind of postings will I receive? + </h4>
+          <h4 class="faq" onclick="toggle(0)"> + What kind of postings will I receive? </h4>
           <p class="ans" style="display:none;"> We send out roles in Design, Engineering, Data Science, and Product straight to your inbox every other week. </p>
-          <h4 class="faq" onclick="toggle(1)"> How can I get more involved? + </h4>
+          <h4 class="faq" onclick="toggle(1)"> + How can I get more involved? </h4>
           <ul class="ans" style="display:none;">
             <li>Follow us on <a href="www.twitter.com/pivottocivic">Twitter</a>!</li>
             <li>Share our newsletter!</li>
             <li>Give us your <a href="mailto:hello@pivottocivic.com">feedback</a>!</li>
           </ul>
-          <h4 class="faq" onclick="toggle(2)"> I’m a company/talent/recruiter looking to expand our entry-level talent base. How can I reach out? + </h4>
+          <h4 class="faq" onclick="toggle(2)"> + I’m a company/talent/recruiter looking to expand our entry-level talent base. How can I reach out? </h4>
           <p class="ans" style="display:none;"> We’re excited to work with you! Email us at hello@pivottocivic.com! </p>
-          <h4 class="faq" onclick="toggle(3)"> My question wasn’t answered here, how can I get in contact with Pivot to Civic? + </h4>
+          <h4 class="faq" onclick="toggle(3)"> + My question wasn’t answered here, how can I get in contact with Pivot to Civic? </h4>
           <p class="ans" style="display:none;"> Email us at hello@pivottocivic.com! </p>
       </div>
     </div>
