--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
 
           <br><br>We'll send you jobs with organizations that are, in some way, working to make the world better. We'll send you openings in product, design, and engineering from advocacy organizations, government, social enterprise, and more.
 
-          <br><br>Interested? Sign up for our newsletter to receive job postings and civic tech community updates!
+          <br><br>Interested? Sign up for our <a href="https://gmail.us18.list-manage.com/subscribe?u=b362cb82549ec5e4bfcaad1a4&id=71471a27c0">newsletter</a> to receive job postings and civic tech community updates! To see past newsletters, <a href="https://us18.campaign-archive.com/home/?u=b362cb82549ec5e4bfcaad1a4&id=71471a27c0">click here</a>.
+
           </p>
         </div>
       </div>
@@ -165,9 +166,9 @@
             <li>Give us your <a href="mailto:hello@pivottocivic.com">feedback</a>!</li>
           </ul>
           <h4 class="faq" onclick="toggle(2)"> + I’m a company/talent/recruiter looking to expand our entry-level talent base. How can I reach out? </h4>
-          <p class="ans" style="display:none;"> We’re excited to work with you! Email us at hello@pivottocivic.com! </p>
+          <p class="ans" style="display:none;"> We’re excited to work with you! Email us at <a href="mailto:hello@pivottocivic.com">hello@pivottocivic.com! </a> </p>
           <h4 class="faq" onclick="toggle(3)"> + My question wasn’t answered here, how can I get in contact with Pivot to Civic? </h4>
-          <p class="ans" style="display:none;"> Email us at hello@pivottocivic.com! </p>
+          <p class="ans" style="display:none;"> Email us at <a href="mailto:hello@pivottocivic.com">hello@pivottocivic.com! </a></p>
       </div>
     </div>
     </div> <!-- /container -->
@@ -177,7 +178,7 @@
         <br>
         <div class="row">
           <div class="col-md-6" id="made-with">
-              <p>Pivot to Civic (c) 2018, made with love <3 </p>
+              <p>Pivot to Civic © 2018, made with love ♡ </p>
           </div>
 
           <div class="col-md-6">
