--- a/index.html
+++ b/index.html
@@ -14,14 +14,11 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Playfair+Display:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dosis:400,700|Roboto+Mono" rel="stylesheet">
 
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
 
     <title>Pivot to Civic</title>
-
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <!-- Custom styles for this template -->
     <link href="main.css" rel="stylesheet">
@@ -31,174 +28,106 @@
 
   <body>
 
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container" id="navcontainer">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-name" href="#"><img id="logo" src="assets/logo.png"></a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right" id="top-links-structure">
-            <a href="https://gmail.us18.list-manage.com/subscribe/post?u=b362cb82549ec5e4bfcaad1a4&id=71471a27c0"><button class="top-link" id="join1"> Join Our Newsletter</button></a>
-            <a href="#about" class="menu-option top-link"> About </a>
-            <a href="#team" class="menu-option top-link"> Our Team</a>
-            <a href="#questions" class="menu-option top-link"> FAQ </a>
-          </form>
-        </div><!--/.navbar-collapse -->
+    <div id="nav">
+      <div id="nav-items">
+        <a class="nav-link" href="#mission"><h4> Our Mission </h4></a>
+        <a class="nav-link" href="#team"><h4> The Team </h4></a>
+        <a class="nav-link" href="#faq"><h4> FAQ </h4></a>
+        <img id="logo" src="assets/logo-white.png">
+        <a class="nav-link" href="#contact"><h4> Contact Us </h4></a>
+        <a class="nav-link" href="http://eepurl.com/c_WaWL"><h4> Join Newsletter </h4></a>
       </div>
-    </nav>
+    </div>
 
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron" id="opener">
-      <div class="container">
-        <div class="col-md-6">
-        </div>
+    <div id="hero">
+      <h1 id="merge"> We've merged! </h1>
+      <a href="https://www.codingitforward.com/" id="home"> Our New Home >> </a>
+    </div>
 
-        <div class="col-md-6">
-          <h1> Pivot to Civic is a biweekly newsletter for entry-level <br>civic tech jobs.  </h1>
-              <br>
-        </div>
-      </div>
-      <div class="container">
-        <div class="col-md-6">
-        </div>
-        <div class="col-md-6">
+    <div class="stando">
+      <h1> Pivot to Civic is a bi-weekly
+        newsletter for entry-level civic tech jobs. </h1>
+    </div>
 
-          <!-- Begin MailChimp Signup Form -->
-            <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
-            <div id="mc_embed_signup">
-            <form action="https://gmail.us18.list-manage.com/subscribe/post?u=b362cb82549ec5e4bfcaad1a4&amp;id=71471a27c0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-              <div id="mc_embed_signup_scroll">
-            	<label for="mce-EMAIL" style="font-size: 16px;">Join Our Newsletter!</label>
-              <br>
-            	<input id="email-bar" type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_b362cb82549ec5e4bfcaad1a4_71471a27c0" tabindex="-1" value=""></div>
-                <div class="clear"><input style="background-color: ##EC474D;" id="join2" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-                </div>
-            </form>
+    <div class="line">
+    </div>
+
+    <div class="grey-bg">
+      <h1 class="subheader" id="mission"> Our Mission </h1>
+      <p class="descriptor">The Pivot to Civic initiative aims to build a talent pipeline of budding designers, developers, and product people into the social impact technology space. We are a group of recent grads who set out to cultivate a community of entry-level techies and provide them the opportunity to make an impact. <span style="color: #EA3433;">We seek to educate, connect, and equip the next generation of mission-driven technologists with the tools they need to make a difference.</span>
+        <br><br>
+        We'll send you jobs with organizations that are, in some way, working to make the world better. We'll send you openings in product, design, and engineering from advocacy organizations, government, social enterprise, and more.
+        <br><br>
+        Interested? Sign up for our newsletter to receive job postings and civic tech community updates! To see past newsletters, click here.</p>
+
+        <br><br>
+        <a href="http://eepurl.com/c_WaWL" id="news"> Join Newsletter >> </a>
+    </div>
+
+    <div class="white-bg">
+      <br><br>
+      <h1 class="subheader" id="team"> The Team </h1>
+      <div class="box-content">
+        <div class="half-box">
+            <img src="assets/e.jpg" class="team-img">
+          </div>
+
+          <div class="half-box">
+            <div class="half-box-text">
+              <h3 class="purple-subhead"> EMILY FONG </h3>
+              <h4 class="title"> Co-Founder <br> Technical Lead </h4>
+              <p> Emily is a recent graduate of New York University and leads Coding it Forward's Build program. DM her for dog pics.
             </div>
-            <!--End mc_embed_signup-->
+        </div>
 
+
+        <div class="half-box">
+          <img src="assets/g.png" class="team-img">
+        </div>
+
+        <div class="half-box">
+            <div class="half-box-text">
+              <h3 class="purple-subhead"> GENESIA TING </h3>
+              <h4 class="title"> Co-Founder <br> Design Lead </h4>
+              <p> Genesia is a recent graduate of UC Davis, currently a Product Designer at Census Open Innovation Labs, and enjoys photographing concerts. </p>
+            </div>
         </div>
       </div>
     </div>
 
-    <div class="jumbotron white-section" id="about">
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-md-3">
-          <h3>About</h3>
-        </div>
-
-        <div class="col-md-9">
-          <br>
-          <p>The Pivot to Civic initiative aims to build a talent pipeline of budding designers, developers, and product people into the social impact technology space. We are a group of recent grads who set out to cultivate a community of entry-level techies and provide them the opportunity to make an impact. We seek to educate, connect, and equip the next generation of mission-driven technologists with the tools they need to make a difference.
-
-          <br><br>We'll send you jobs with organizations that are, in some way, working to make the world better. We'll send you openings in product, design, and engineering from advocacy organizations, government, social enterprise, and more.
-
-          <br><br>Interested? Sign up for our <a href="https://gmail.us18.list-manage.com/subscribe?u=b362cb82549ec5e4bfcaad1a4&id=71471a27c0">newsletter</a> to receive job postings and civic tech community updates! To see past newsletters, <a href="https://us18.campaign-archive.com/home/?u=b362cb82549ec5e4bfcaad1a4&id=71471a27c0">click here</a>.
-
-          </p>
-        </div>
-      </div>
-
-    </div> <!-- /container -->
-
-    <div class="jumbotron" id="team">
-
-      <div class="row">
-        <div class="col-md-3">
-          <h3 id="team-title"> Our Team </h3>
-        </div>
-      </div>
-
-      <div class="row">
-
-        <div class="col-md-4 about-div">
-          <div class="about-pic" id="emily">
-          </div>
-          <br>
-          <h4> <strong> Emily Fong </strong> </h4>
-          <h5> Co-Founder, Technical Lead </h5>
-          <a href="https://www.linkedin.com/in/em-fong/" target="_blank"><img class="socials" src="assets/linkedin.svg"></a>
-          <a href="https://twitter.com/emolyfong" target="_blank"><img class="socials" src="assets/twitter.svg"></a>
-        </div>
-        <div class="col-md-4 about-div">
-          <div class="about-pic" id="genesia">
-          </div>
-          <br>
-          <h4> <strong> Genesia Ting </strong> </h4>
-          <h5> Co-Founder, Design Lead </h5>
-          <a href="https://www.linkedin.com/in/genesiating/" target="_blank"><img class="socials" src="assets/linkedin.svg"></a>
-          <a href="https://twitter.com/genesiating" target="_blank"><img class="socials" src="assets/twitter.svg"></a>
-       </div>
-        <div class="col-md-4 about-div">
-          <div class="about-pic" id="omer">
-          </div>
-          <br>
-          <h4> <strong> Omer Bensaadon </strong> </h4>
-          <h5> Co-Founder, Product Lead </h5>
-          <a href="https://www.linkedin.com/in/obensaadon/" target="_blank"><img class="socials" src="assets/linkedin.svg"></a>
-          <a href="https://twitter.com/omer_bensaadon" target="_blank"><img class="socials" src="assets/twitter.svg"></a>
-        </div>
-      </div>
-    </div> <!-- /container -->
-
-    <div class="jumbotron white-section">
-      <div class="row">
-        <div class="col-md-3" id="questions">
-          <h3> Questions? </h3>
-        </div>
+    <div class="grey-faq">
+      <h1 class="subheader" id="faq"> Frequently Asked Questions </h1>
+      <div class="faq-half">
+        <h3 class="purple-faq"> + &nbsp; What emails will I receive? </h3>
+        <p class="descriptor"> We'll send out newsletters every two weeks that contain job and internship opportunities, resources for learning about civic tech, original content, and more! </p>
         <br>
-        <div class="col-md-9">
-          <h4 class="faq" onclick="toggle(0)"> + What kind of postings will I receive? </h4>
-          <p class="ans" style="display:none;"> We send out roles in Design, Engineering, Data Science, and Product straight to your inbox every other week. </p>
-          <h4 class="faq" onclick="toggle(1)"> + How can I get more involved? </h4>
-          <ul class="ans" style="display:none;">
-            <li>Follow us on <a href="www.twitter.com/pivottocivic">Twitter</a>!</li>
-            <li>Share our newsletter!</li>
-            <li>Give us your <a href="mailto:hello@pivottocivic.com">feedback</a>!</li>
-          </ul>
-          <h4 class="faq" onclick="toggle(2)"> + I’m a company/talent/recruiter looking to expand our entry-level talent base. How can I reach out? </h4>
-          <p class="ans" style="display:none;"> We’re excited to work with you! Email us at <a href="mailto:hello@pivottocivic.com">hello@pivottocivic.com! </a> </p>
-          <h4 class="faq" onclick="toggle(3)"> + My question wasn’t answered here, how can I get in contact with Pivot to Civic? </h4>
-          <p class="ans" style="display:none;"> Email us at <a href="mailto:hello@pivottocivic.com">hello@pivottocivic.com! </a></p>
+        <h3 class="purple-faq"> + &nbsp; I'm a recruiter, how can I reach out? </h3>
+        <p class="descriptor"> You can email our team at <a href="mailto:team@codingitforward.com"> <span style="color: #EA3433;">team@codingitforward.com</span><a>! We'll provide information on how you can post your opportunity on our job board, or how to get to know our awesome online community. </p>
+=      </div>
+      <div class="faq-half">
+        <h3 class="purple-faq"> + &nbsp; How can I get involved? </h3>
+        <p class="descriptor"> Be sure to sign up for the <a href="http://eepurl.com/c_WaWL"><span style="color: #EA3433;">newsletter</span></a> and join our <a href="https://www.facebook.com/codingitforward/"><span style="color: #EA3433;">Facebook group</span></a>. If you have additional inquiries, feel free to reach out to us at <a href="mailto:team@codingitforward.com"><span style="color: #EA3433;">team@codingitforward.com</span><a>. </p>
+        <br>
+        <h3 class="purple-faq"> + &nbsp; Where did Pivot to Civic go? </h3>
+        <p class="descriptor"> We're still here! Pivot to Civic started during Coding it Forward's 2018 <a href="https://www.codingitforward.com/fellowship/"><span style="color: #EA3433;">Civic Digital Fellowship</span></a>, so it's fitting that it merged with the organization that helped start it. With the Coding it Forward team behind us, we're able to be even more creative and ambitious with our content.</p>
+        <br>
       </div>
     </div>
-    </div> <!-- /container -->
 
-    <footer class="footer" id="end-footer">
-      <div class="container">
-        <br>
-        <div class="row">
-          <div class="col-md-6" id="made-with">
-              <p>Pivot to Civic © 2018, made with love ♡ </p>
-          </div>
+    <div class="stando" id="contact">
+      <h1> For any additional inquiries, reach out to:
+      team@codingitforward.com </h1>
+    </div>
 
-          <div class="col-md-6">
-            <div id="social-footer">
-              <a href="mailto:hello@pivottocivic.com"><img class="footer-icon" src="assets/email.svg"></a>
-              <a href="https://www.linkedin.com/company/pivottocivic/" target="_blank"><img class="footer-icon" src="assets/linkedin-footer.svg"></a>
-              <img href="https://twitter.com/pivottocivic" target="_blank" class="footer-icon" src="assets/twitter-footer.svg">
-              <!-- <img href="https://join.slack.com/t/pivottocivic/shared_invite/enQtNDI1MTI2MzU0NDgxLTFiYzg1YzExZDFkNTdlMzQyZDJmMTllMjhkNmJlNDhhNmM2OWRhMmY1YWIxNTM5NzYxOTZkZTlmY2FlODJjZDM" target="_blank" class="footer-icon" src="assets/slack.svg"> -->
-            </div>
-          </div>
-        </div>
-      </div>
-    </footer>
+    <div class="line">
+    </div>
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <div align="center"id="social">
+      <img src="assets/email.svg">
+      <img src="assets/linkedin.svg">
+      <img src="assets/twitter.svg">
+    </div>
+
 
   </body>
 </html>
